--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.6",
+    "gh-pages": "^5.0.0",
     "react-icons": "^4.7.1",
-    "sass": "^1.58.0"
+    "sass": "^1.58.0",
+    "sharp": "^0.31.3"
   }
 }
