--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "export" : "next export",
+    "dev": "set NODE_ENV=development && next dev",
+    "build": "set NODE_ENV=production && next build",
+    "export" : "set NODE_ENV=production && next export",
     "start": "next start",
     "lint": "next lint"
   },
