--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
     - run: npm run export
     
     - name: Deploy 🚀
-      uses: JamesIves/github-pages-deploy-action@v4
+      uses: JamesIves/github-pages-deploy-action@v4.4
       with:
           branch: gh-pages
-          folder: out # The folder the action should deploy.
+          folder: ../out # The folder the action should deploy.
