--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,9 +28,10 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build
+    - run: touch ./out/.nojekyll
     
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
       with:
           branch: gh-pages
-          folder: ./out # The folder the action should deploy.
+          folder: out # The folder the action should deploy.
