--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
+    "react-transition-group": "^4.4.5",
     "typescript": "4.9.5"
   },
   "devDependencies": {
