--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.6",
+    "@types/react-transition-group": "^4.4.5",
     "react-icons": "^4.7.1",
     "react-transition-group": "^4.4.5",
     "sass": "^1.58.0",
