--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/react-helmet": "^6.1.6",
     "@types/react-transition-group": "^4.4.5",
     "react-icons": "^4.7.1",
